Fixed text overlap issue on chrome

--- a/PersonalWebsite/src/app/app.component.scss
+++ b/PersonalWebsite/src/app/app.component.scss
@@ -12,7 +12,7 @@
     border-style: solid;
     border-width: 0 0 2px 0;
     border-color: $colorBorder;
-    padding: 1em;
+    padding: 1em 0;
     font-family: monospace;
     text-align: center;
     position: sticky;
@@ -28,6 +28,11 @@
 
         .navbar-nav {
           margin: 0 0 0 auto;
+        }
+
+        .navbar-title {
+          padding-left: 0 !important;
+          padding-right: 0 !important;
         }
 
         .col {
